--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "repository": "https://github.com/Benchamxd/Bin-Checker",
     "success_url": "/",
     "env": {
-        "BOT_TOKEN": {
+        "API_KEY": {
             "description": "your Telegram Bot Token, from @BotFather"
         },
         "START_MESSAGE": {
