--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
-    "name": "Bin-Checker Bot",
-    "description": "A simple bot to check if the bin is valid or not.",
+    "name": "Ekart Bot",
+    "description": "A PHP Telegram Bot To Fetch Your Ekart Shipment Details.",
     "keywords": [
-        "Bin",
-        "Bot",
-        "Telegra."
+        "Ekart",
+        "Shipment",
+        "Tracking"
     ],
-    "website": "#TODO",
+    "logo": "#TODO",
     "repository": "https://github.com/Benchamxd/Bin-Checker",
-    "success_url": "/",
+    "success_url": "/bot.php",
     "env": {
         "API_KEY": {
             "description": "your Telegram Bot Token, from @BotFather"
